Bugs - 
1. corner case where the new "by example" methods fail if a criteria
   class has been added to the list, but there are no criteria set
2. trimStrings on JavaModelGenerator not working
3. Fix the XML file merger so that entities are preserved
4. Fixed the configuration parser so that it correctly deals with
   external entities
5. IBATIS-434 - Incorrect default mapping for BIT datatype

Enhancements - 
1. IBATIS-348 - escape column names with $ or #, and ignore special characters
   for generated Java properties by default
2. Add "clear" method to generated example classes in the Java2/Java5
   generator sets
3. Add support for "ignoreQualifiersAtRuntime" and "runtimeTableName" on
   the <table> configuration - this makes it easier to deal with tables
   that are behind public aliases.
4. Added support for persisting a configuration to XML - this to enable
   a graphical editor in the future
5. Add afterXXXGenerationHook() methods in all generators to enable adding
   extra Java code or XML elements to any generated object.  This will make
   it easier to create customized generators
6. Added SYBASE database dialect for generated keys
7. Added the ability to specify that resultMaps should use column indexes
   rather than column name.  This is necessary in poorly designed tables
   where column names differ only in case.  This may also improve performance.
8. Added the ability to work with delimited names in database tables or
   columns.
9. API change to allow generating with selected contexts rather than
   the entire config file.
10. API change to allow generating with selected tables rather than
    the entire config file.
11. Exposed new support for selecting tables and/or contexts to the
    command line and the Ant task 
12. IBATIS-414 - make the Example and Criteria classes extendable
13. Added countByExample generated method
14. Added updateByExample generated method
15. Java2 is now the default generator set