@@ -62,7 +62,7 @@ of your project.  The <code>SqlMapConfig.xml</code> file should have these entri
   &lt;/sqlMapConfig&gt;
 </pre>
 
-<p>If there are more than one SQL Map XML files (as is quite common),
+<p>If there is more than one SQL Map XML file (as is quite common),
 then the files can be listed in any order with repeated <code>&lt;sqlMap&gt;</code>
 elements after the <code>&lt;transactionManager&gt;</code> element.</p>
 
