@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>XML Configuration File Reference</h1>
-<p>In the normal use case, Abator is driven by an XML configuration file.
+<p>In the most common use case, Abator is driven by an XML configuration file.
   The configuration file tells Abator:</p>
 
 <ul>
