@@ -9,9 +9,8 @@
 </head>
 <body>
 <h1>Abator Roadmap</h1>
-<p>The following are enhancements that we would like to make to Abator:</p>
+<p>The following are enhancements that are under consideration for future versions of Abator:</p>
 <ul>
-  <li>Update By Example Method</li>
   <li>Generate objects from arbitrary queries</li>
   <li>Generate nested objects and specialized queries that utilize the iBATIS
       groupBy function</li>
