@@ -16,11 +16,13 @@
   <li>From another Java program with an XML configuration</li>
   <li>From another Java program with a Java based configuration</li>
 </ul>
-<p>Each method is described in detail below.  Note that there is also an Eclipse
+<p>Each method is described in detail below.</p>
+<p><b>Note:</b> there is also an Eclipse
 plugin for Abator that adds extra function - namely good integration into Eclipse,
 an Eclipse enabled Ant task, and support for automatic merging of
-Java files.  See the Abator home page for information on installing the
-Eclipse plugin.</p>
+Java files.  See the
+<a target="_blank" href="http://ibatis.apache.org/abator.html">Abator</a>
+home page for information on installing the Eclipse plugin.</p>
 
 <p><b>Important:</b> When running outside of an IDE environment like Eclipse,
   Abator interprets the <code>targetProject</code> and
@@ -34,9 +36,9 @@ Eclipse plugin.</p>
 </ul>
 
 <h2>Running Abator from the Command Line</h2>
-<p>Abator can be run directly from the command line.  The JAR manifest includes the
+<p>Abator may be run directly from the command line.  The JAR manifest includes the
    name of the default class (<code>org.apache.ibatis.abator.api.AbatorRunner</code>)
-   or you can specify it yourself.  The <code>AbatorRunner</code>
+   or you may specify it yourself.  The <code>AbatorRunner</code>
    class accepts several arguments as detailed below:</p>
 <table border="1" cellspacing="0" cellpadding="5">
 <tr>
@@ -81,7 +83,8 @@ Eclipse plugin.</p>
 </tr>
 </table>
 
-<p>You must still create an Abator XML configuration file.  If the file is
+<p>You must create an Abator XML configuration file to run Abator from the
+   command line.  If the file is
    named "abatorConfig.xml", then any of the following command lines will run
    Abator:</p>
 <pre>
@@ -163,8 +166,8 @@ Eclipse plugin.</p>
 
 <p>Notes:</p>
 <ul>
-  <li>The classpath on the &lt;taskdef&gt; is used to tell Ant where the implementing
-     code is.  This is optional if you add Abator to the Ant classpath in one
+  <li>The classpath on the &lt;taskdef&gt; is used to tell Ant where the Abator JAR file
+     is.  This is optional if you add Abator to the Ant classpath in one
      of the other ways described in the Ant manual</li>
    <li>The name of the task can be anything you desire, "abator" is
      simply an example</li>
